--- a/app/sass/components/_media.scss
+++ b/app/sass/components/_media.scss
@@ -490,6 +490,10 @@
 
 // 600
 @media screen and (max-width: 1023px){
+	.block-terms__el{}
+	.block-terms__el-title{
+		margin-bottom: 16px;
+	}
 	.work-el__text{
 		min-height: 0;
 		margin-bottom: 0;
@@ -610,7 +614,7 @@
 		max-width: 100%;
 	}
 	.title_sec{
-		font-size: 24px;
+		font-size: 32px;
 		line-height: 1.25;
 	}
 	.modal-content__close{
@@ -921,7 +925,7 @@
 	}
 	.block-form-2__img{
 		margin: 0;
-		max-width: 193px;
+		max-width: 100%;
 		margin-left: auto;
 		margin-right: auto;
 		display: block;
@@ -1060,7 +1064,8 @@
 			margin: 0;
 			height: 296px;
 			object-fit: cover;
-			border-radius: 30px;
+			object-position: center;
+			border-radius: 32px;
 			margin-right: 24px;
 			margin-bottom: 0;
 		}
@@ -1665,7 +1670,7 @@
 		width: 100%;
 	}
 	.block-terms__el{
-		margin-bottom: 16px;
+		margin-bottom: 48px;
 	}
 	.descrp-el-2__text{
 		margin-top: 0;
@@ -1892,7 +1897,7 @@
 
 	}
 	.question-el__title{
-		font-size: 18pt;
+		font-size: 18px;
 	}
 	.question-el__top{
 		padding: 16px;
@@ -1942,6 +1947,9 @@
 	}
 	.block-info-4 .block-info-4__el{
 		margin-bottom: 0;
+	}
+	.terms-el__body{
+		max-width: 100%;
 	}
 }
 
@@ -2094,11 +2102,46 @@
 	.block-pwp__el{
 		padding: 0 15px;
 	}
+	.article-el_big__body{
+		margin-top: 8px;
+	}
+	.block-articles-top__left{
+		margin-bottom: 32px;
+	}
 }
 
 @media screen and (max-width: 600px){
 	.top-menu .top-menu__nav .links-2__el{
 		margin-bottom: 20px;
+	}
+
+	.sec-facts{
+		.container{
+			padding: 0;
+		}
+		.sec-facts__content{
+			position: relative;
+			&::before{
+				content: '';
+				position: absolute;
+				right: -1px;
+				top: 0;
+				height: 100%;
+				width: 1;
+				z-index: 10;
+				box-shadow: 6px 2px 20px 13px #efefef;
+			}
+		}
+	}
+	.block-facts{
+		padding-left: 15px;
+	}
+	.sec-facts__wrap{
+		padding-bottom: 25px;
+		padding-top: 25px;
+	}
+	.sec-plan{
+		padding-top: 25px;
 	}
 }
 
