--- a/app/sass/components/_main.scss
+++ b/app/sass/components/_main.scss
@@ -189,7 +189,7 @@ body{
 	background-position: top center;
 	background-size: cover;
 	position: relative;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     // min-height: 100vh;
 	&::before{
 		content: '';
