--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3287,7 +3287,7 @@ body {
     width: 100%;
     max-width: 100%; }
   .title_sec {
-    font-size: 32px;
+    font-size: 24px;
     line-height: 1.25; }
   .modal-content__close {
     margin-top: 2px; }
@@ -3507,6 +3507,7 @@ body {
   .block-form-2__img {
     margin: 0;
     max-width: 100%;
+    width: 240px;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -4264,6 +4265,7 @@ body {
   .block-form-2__img {
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
     margin-top: 0;
     margin-bottom: 0; }
   .sec-form__wrap {
@@ -4305,7 +4307,8 @@ body {
     margin-right: auto; }
   .sec-form_2 .block-form-2__img {
     max-width: 100%;
-    height: 224px;
+    min-height: 224px;
+    height: 57vw;
     object-position: top;
     margin-bottom: 16px; }
   .sec-form_2 .block-form-2__body {
