--- a/app/sass/components/_main.scss
+++ b/app/sass/components/_main.scss
@@ -440,6 +440,7 @@ body{
 		}
 		.block-form-2__img{
 			margin-right: 25px;
+			max-width: 286px;
 		}
 		.block-form-2__content{
 			margin-top: 24px;
